# direct-access-mapreduce

./: CMakeLists.txt  README.md  alloc_shared_files.sh  direct_access_mr.code-workspace  distr_input.sh  init_workers.sh  mnt_targets.sh  mr_wordcount.c  rm_isplits.sh  rm_outputs.sh  run_mapred.sh  run_worker.sh  set_env.sh  start_workers.sh
include/direct_access_mr/: mapreduce.h
src/: mapreduce.c  worker.c
